welcome.lessons.welcome.variables.Variables.scala.error
Variables:7: error: not found: type int
var DejaFait:int=0
             ^