welcome.lessons.welcome.variables.Variables.scala.code
var NbPas=0
while (!estSurBiscuit()){
	avance;
	NbPas=NbPas + 1
}
prendBiscuit();
var DejaFait:int=0
while (DejaFait != NbPas){
	recule  
}
